--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -1636,7 +1636,7 @@
     },
     "contactForm": {
       "row1": "Ciao! Mi chiamo",
-      "row1Right": "e lavoro a",
+      "row1Right": "e il mio brand è",
       "row2": "Ti ho trovata usando",
       "row3": "Ho bisogno di aiuto con:",
       "row4": "Vorrei restare attorno a:",
