--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -1644,7 +1644,8 @@
       "row5Right": "per cominciare a parlarne.",
       "row6": "Mi piacerebbe condividere maggiori dettagli sul mio progetto:",
       "btn": "Invia",
-      "passaparola": "Passaparola"
+      "passaparola": "Passaparola",
+      "altro": "Altro"
     }
   }
 }
