--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -8,12 +8,12 @@
     },
     "sezioneUno": {
       "paragrafi": [
-        "<p>Mi chiamo <strong>Elisa </strong> e mi trovi online come <strong>Miaographics</strong>. ",
+        "<p>Mi chiamo <strong>Elisa </strong> e mi trovi online come <strong>MIAO graphics</strong>. ",
         "Sono una <strong>Graphic Designer</strong> e <strong>Content Creator</strong>, e sono qui per essere la tua partner nella definizione dell’identità visiva della tua azienda.</p>  <p>Posso creare per te un logo su misura, in base alle tue esigenze strategiche e alla tua mission, dal design unico, che ti aiuti a farti notare e a differenziarti dai competitors. </p>",
         "<p><strong>Aiuto le piccole e medie aziende</strong> a raggiungere i propri obiettivi di business, mediante un’analisi approfondita del prodotto/servizio, del mercato e del target.</p>"
       ],
       "paragrafi2": [
-        "<p>Posso offrirti <strong>soluzioni personalizzate</strong> in linea con tuo budget e con i tuoi obiettivi. Il mio scopo è quello di aiutarti ad avere un’immagine forte e una comunicazione coerente che ti permetta di distinguerti dalla concorrenza, raggiungere nuovi clienti e crescere.</p>",
+        "<p>Posso offrirti <strong>soluzioni personalizzate</strong> in linea con il tuo budget e con i tuoi obiettivi. Il mio scopo è quello di aiutarti ad avere un’immagine forte e una comunicazione coerente che ti permetta di distinguerti dalla concorrenza, raggiungere nuovi clienti e crescere.</p>",
         "<p> Per me, è fondamentale conoscere la tua storia, la tua realtà e i tuoi obiettivi aziendali. </p>",
         "<p>Attraverso un incontro conoscitivo, che può anche essere online, sarò in grado di capire le tue esigenze e sviluppare una comunicazione visiva su misura per te.</p>"
       ],
@@ -27,16 +27,16 @@
       "titoloP": "Soluzioni Creative a 360°",
       "descrizione": "Il Graphic Design e la Comunicazione Visiva sono l’arte invisibile che permea il nostro mondo. Si tratta di molto più di semplici immagini e colori; sono strumenti potenti che plasmano le nostre percezioni e guidano le nostre decisioni.",
       "descrizione2": "In un’era digitale, dove l’attenzione è un bene prezioso, il design ben pensato cattura l’occhio e trattiene l’attenzione. È la differenza tra essere notati o ignorati. ",
-      "descrizione3": "<strong>La Comunicazione Visiva</strong> è lo strumento che trasforma le idee in realtà, che da vita al marchio e che comunica contenuti ad alto impatto sensoriale destando l’attenzione del pubblico target."
+      "descrizione3": "<strong>La Comunicazione Visiva</strong> è lo strumento che trasforma le idee in realtà, che da' vita al marchio e che comunica contenuti ad alto impatto sensoriale destando l’attenzione del pubblico target."
     },
     "sezioneTre": {
-      "paragrafi": "La mia missione è assistere le piccole realtà aziendali nella definizione di un’immagine coordinata che sia unica ed efficace. Questo processo è fondamentale per distinguersi dalla concorrenza e per consolidare la propria presenza sul mercato off e on-line. Creo contenuti sia visivi che testuali che siano in linea con gli obiettivi di business e che si  sappiano coinvolgere il giusto pubblico.",
+      "paragrafi": "La mia missione è assistere le piccole realtà aziendali nella definizione di un’immagine coordinata che sia unica ed efficace. Questo processo è fondamentale per distinguersi dalla concorrenza e per consolidare la propria presenza sul mercato off e online. Creo contenuti sia visivi che testuali che siano in linea con gli obiettivi di business e che si  sappiano coinvolgere il giusto pubblico.",
 
       "cta": "Case History",
       "title": "/sectionsTitle/sezioneTre.png",
       "img": "/sectionsTitle/logosmix.jpg",
       "titoloP": "Alcuni lavori svolti",
-      "paragrafo1": "La mia missione è assistere le piccole realtà aziendali nella definizione di un’immagine coordinata che sia unica ed efficace. Questo processo è fondamentale per distinguersi dalla concorrenza e per consolidare la propria presenza sul mercato off e on-line. Creo contenuti sia visivi che testuali che siano in linea con gli obiettivi di business e che si  sappiano coinvolgere il giusto pubblico."
+      "paragrafo1": "La mia missione è assistere le piccole realtà aziendali nella definizione di un’immagine coordinata che sia unica ed efficace. Questo processo è fondamentale per distinguersi dalla concorrenza e per consolidare la propria presenza sul mercato off e online. Creo contenuti sia visivi che testuali che siano in linea con gli obiettivi di business e che si  sappiano coinvolgere il giusto pubblico."
     },
     "sezioneQuattro": {
       "cta": "Altre notizie",
@@ -55,10 +55,10 @@
     "sezioneUno": {
       "img": "/sectionsTitle/eli.png",
       "presentazione": [
-        "Fin da bambina ho usato le mani per plasmare oggetti e disegnare i personaggi della mia fantasia. Artigiana nel cuore e di fatto, partecipo da anni con il mio banchetto alla Foire de Saint-Ours e realizzo oggetti hand-made. ",
-        "Dopo aver studiato allo Ied di Torino, nel 2008 apro il mio atelier creativo con il nome di l’heartelier. Da qualche anno itinerante tra Milano e Aosta, ho deciso di rinnovare la mia identità diventando <strong>Miao graphics - grafismi itineranti </strong> esattamente come me (sempre con la valigia in mano). ",
+        "Fin da bambina ho usato le mani per plasmare oggetti e disegnare i personaggi della mia fantasia. Artigiana nel cuore e di fatto, partecipo da anni con il mio banchetto alla Foire de Saint-Ours e realizzo oggetti handmade. ",
+        "Dopo aver studiato allo Ied di Torino, nel 2008 apro il mio atelier creativo con il nome di l’heartelier. Da qualche anno itinerante tra Milano e Aosta, ho deciso di rinnovare la mia identità diventando <strong>MIAO graphics - grafismi itineranti </strong> esattamente come me (sempre con la valigia in mano). ",
         "Come graphic designer professionista, offro <strong>soluzioni creative a 360° </strong> per aiutare il tuo business a spiccare e ad affermarsi. La mia filosofia di lavoro si basa sulla collaborazione e sulla comprensione delle tue esigenze. ",
-        "<strong>Insieme creeremo un percorso creativo su misura per te. </strong>",
+        "<strong>Insieme progetteremo un percorso creativo su misura per te. </strong>",
         "<strong>Ogni brand ha una storia da raccontare</strong>, e io sono qui per trasformarla in un design unico. <strong>Il mio intento è catturare la tua idea e tradurla in un’identità visiva (logo, pack, illustrazione) memorabile. </strong>",
         "<strong>Contattami oggi </strong> per iniziare questo entusiasmante itinerario creativo!"
       ],
@@ -955,7 +955,7 @@
     },
     "intro": [
       "Una selezione di lavori che raccontano per immagini, i servizi da me offerti.",
-      "<span style='color:#de4928;font-weight: bold'>Guarda  tutte le case history :)</span>"
+      "<span style='color:#de4928;font-weight: bold'>Guarda la mia history :)</span>"
     ],
     "worksItem": [
       {
