--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -246,7 +246,7 @@
         ],
         "call": "Prenota una call con me",
         "titleOpzioni": "Perchè non volere di più? Ecco altre opzioni su misura per te",
-        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidando la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
+        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidare la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
         "opzioni": "Ti potrebbe anche interessare"
       },
       "branding": {
@@ -362,7 +362,7 @@
 
         "call": "Prenota una call con me",
         "titleOpzioni": "Perchè non volere di più? Ecco altre opzioni su misura per te",
-        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidando la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
+        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidare la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
         "opzioni": "Ti potrebbe anche interessare"
       },
       "label": {
@@ -422,7 +422,7 @@
 
         "call": "Prenota una call con me",
         "titleOpzioni": "Perchè non volere di più? Ecco altre opzioni su misura per te",
-        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidando la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
+        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidare la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
         "opzioni": "Ti potrebbe anche interessare"
       },
       "social": {
@@ -508,7 +508,7 @@
 
         "call": "Prenota una call con me",
         "titleOpzioni": "Perchè non volere di più? Ecco altre opzioni su misura per te",
-        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidando la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
+        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidare la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
         "opzioni": "Ti potrebbe anche interessare"
       },
       "campagne": {
@@ -593,7 +593,7 @@
 
         "call": "Prenota una call con me",
         "titleOpzioni": "Perchè non volere di più? Ecco altre opzioni su misura per te",
-        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidando la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
+        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidare la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
         "opzioni": "Ti potrebbe anche interessare"
       },
       "allestimenti": {
@@ -671,7 +671,7 @@
 
         "call": "Prenota una call con me",
         "titleOpzioni": "Perchè non volere di più? Ecco altre opzioni su misura per te",
-        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidando la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
+        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidare la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
         "opzioni": "Ti potrebbe anche interessare"
       },
       "illustrazione": {
@@ -760,7 +760,7 @@
 
         "call": "Prenota una call con me",
         "titleOpzioni": "Perchè non volere di più? Ecco altre opzioni su misura per te",
-        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidando la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
+        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidare la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
         "opzioni": "Ti potrebbe anche interessare"
       },
       "content": {
@@ -917,7 +917,7 @@
 
         "call": "Prenota una call con me",
         "titleOpzioni": "Perchè non volere di più? Ecco altre opzioni su misura per te",
-        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidando la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
+        "descOpzioni": "Lavoreremo insieme a Francesca, web designer molto talentuosa, per ideare un sito web professionale che ti permetta di rafforzare la tua identità aziendale e così consolidare la tua presenza online. Grazie alle sue competenze, ti propongo queste opzioni:",
         "opzioni": "Ti potrebbe anche interessare"
       }
     },
