--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -955,7 +955,7 @@
     },
     "intro": [
       "Una selezione di lavori che raccontano per immagini, i servizi da me offerti.",
-      "<span style='color:#de4928;font-weight: bold'>Guarda la mia history :)</span>"
+      "<span style='color:#de4928;font-weight: bold'>Guarda la mia case history :)</span>"
     ],
     "worksItem": [
       {
