--- a/public/locales/en/en.json
+++ b/public/locales/en/en.json
@@ -74,7 +74,7 @@
     },
     "sezioneQuattro": {
       "title": "/sectionsTitle/mitha_title.png",
-      "img": "/assets/mitha_animation.gif",
+      "img": "/assets/mitha_cover.png",
       "paragrafi": [
         "Moreover, there's Mitha, a creative idea that was born almost as a game, a challenge between me and <a href='https://www.thallion-dev.it/' target='_blank'><b> Thallion+dev</b></a>, a talented web designer who also created my website. I've always sought to surround myself with determined professionals who are resolute in pursuing their goals.",
         "This shared project is an opportunity for clients, as in Mitha, they can find all the solutions they need without having to look elsewhere. <span style='color:#de4928;font-weight: bold'> Stay tuned!</span>"
