--- a/public/locales/fr/fr.json
+++ b/public/locales/fr/fr.json
@@ -70,7 +70,7 @@
     },
     "sezioneQuattro": {
       "title": "/sectionsTitle/mitha_title.png",
-      "img": "/assets/mitha_animation.gif",
+      "img": "/assets/mitha_cover.png",
       "paragrafi": [
         "De plus, il y a Mitha, une idée créative qui est née presque par jeu, un pari entre <a href='https://www.thallion-dev.it/' target='_blank'><strong>Thallion+dev</strong></a>, une talentueuse webdesigner qui a également créé mon site, et moi. J'ai toujours cherché à m'entourer de professionnels déterminés et concrets dans la poursuite de leurs objectifs.",
         "Ce projet partagé est une opportunité pour les clients, car avec Mitha, ils peuvent trouver toutes les solutions dont ils ont besoin sans l'inconvénient de devoir chercher ailleurs. <span style='color:#de4928;font-weight: bold'> Restez connectés</span> !"
