--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -72,7 +72,7 @@
     },
     "sezioneQuattro": {
       "title": "/sectionsTitle/mitha_title.png",
-      "img": "/assets/mitha_animation.gif",
+      "img": "/assets/mitha_cover.png",
       "paragrafi": [
         "Inoltre, c'è Mitha, un'idea creativa che è nata quasi per gioco, una scommessa tra me e <a href='https://www.thallion-dev.it/' target='_blank'><strong>Thallion+dev</strong></a>, una talentuosa web designer che ha anche creato il mio sito. Ho sempre cercato di circondarmi di professionisti determinati e concreti nel perseguire i loro obiettivi.",
         "Questo progetto condiviso è un'opportunità per i clienti, poiché in Mitha possono trovare tutte le soluzioni di cui hanno bisogno senza dover cercare altrove.<span style='color:#de4928;font-weight: bold'> Stay tuned!</span>"
