--- a/public/locales/fr/fr.json
+++ b/public/locales/fr/fr.json
@@ -48,7 +48,7 @@
     },
     "hero": {
       "title": "/pageImg/meTitle_fr.png",
-      "img": "/pageImg/lampadina.webp"
+      "img": "/pageImg/lampadina2.webp"
     },
     "sezioneUno": {
       "img": "/sectionsTitle/eli.png",
@@ -84,7 +84,7 @@
   "servizi": {
     "hero": {
       "title": "/pageImg/serviceTitle_fr.png",
-      "img": "/pageImg/gatto.webp"
+      "img": "/pageImg/gatto2.webp"
     },
     "serviziItem": [
       {
@@ -944,7 +944,7 @@
   "portfolio": {
     "hero": {
       "title": "/pageImg/portfolioTitle.png",
-      "img": "/pageImg/gufo.webp"
+      "img": "/pageImg/gufo2.webp"
     },
     "intro": [
       "Une sélection de travaux en images pour les services que je propose.",
@@ -1619,13 +1619,13 @@
   "blog": {
     "hero": {
       "title": "/pageImg/blogTitle_fr.png",
-      "img": "/pageImg/gattina.webp"
+      "img": "/pageImg/gattina2.webp"
     }
   },
   "contatti": {
     "hero": {
       "title": "/pageImg/contattiTitle_en.png",
-      "img": "/pageImg/lupo.webp"
+      "img": "/pageImg/lupo2.webp"
     },
     "contactForm": {
       "row1": "Salut ! Je m'appelle",
