--- a/public/locales/en/en.json
+++ b/public/locales/en/en.json
@@ -765,7 +765,7 @@
         "title": "/serviziImg/content_Title.png",
         "introTitle": "Engage Your Target Audience with Tailor-Made Content",
         "intro": [
-          "Creating tailor-made content, be it photos, videos, or texts, is the magical formula for success on social media and beyond. That's why you should make personalization an absolute priority.",
+          "Creating tailor-made content, be it photos, videos, or texts, is the magical formula for success on social media and beyond. That's why you should make personalization an absolute .",
 
           "Customized content allows you to build a direct bridge between your brand and your audience. Every photo and every word can be adapted to reflect the values, voice, and unique personality of your brand, establishing an authentic connection with your followers.",
           "Personalization isn't limited to social media. You can extend it to your promotional materials, creating a cohesive and recognizable image of your brand wherever it appears. This consistency strengthens your presence and credibility."
