--- a/public/locales/en/en.json
+++ b/public/locales/en/en.json
@@ -614,52 +614,52 @@
         "link": "allestimenti",
         "gallery": [
           {
-            "src": "/serviziImg/allestimenti/allestimenti.jpg",
+            "src": "/serviziImg/allestimenti/allestimenti.webp",
             "width": 600,
             "height": 600
           },
           {
-            "src": "/serviziImg/allestimenti/allestimenti2.jpg",
+            "src": "/serviziImg/allestimenti/allestimenti2.webp",
             "width": 600,
             "height": 600
           },
           {
-            "src": "/serviziImg/allestimenti/allestimenti3.jpg",
+            "src": "/serviziImg/allestimenti/allestimenti3.webp",
             "width": 600,
             "height": 600
           },
           {
-            "src": "/serviziImg/allestimenti/allestimenti4.jpg",
+            "src": "/serviziImg/allestimenti/allestimenti4.webp",
             "width": 600,
             "height": 600
           },
           {
-            "src": "/serviziImg/allestimenti/allestimenti5.jpg",
+            "src": "/serviziImg/allestimenti/allestimenti5.webp",
             "width": 600,
             "height": 600
           },
           {
-            "src": "/serviziImg/allestimenti/allestimenti6.jpg",
+            "src": "/serviziImg/allestimenti/allestimenti6.webp",
             "width": 600,
             "height": 600
           },
           {
-            "src": "/serviziImg/allestimenti/allestimenti7.jpg",
+            "src": "/serviziImg/allestimenti/allestimenti7.webp",
             "width": 600,
             "height": 600
           },
           {
-            "src": "/serviziImg/allestimenti/allestimenti8.jpg",
+            "src": "/serviziImg/allestimenti/allestimenti8.webp",
             "width": 600,
             "height": 600
           },
           {
-            "src": "/serviziImg/allestimenti/allestimenti9.jpg",
+            "src": "/serviziImg/allestimenti/allestimenti9.webp",
             "width": 600,
             "height": 600
           },
           {
-            "src": "/serviziImg/allestimenti/allestimenti10.jpg",
+            "src": "/serviziImg/allestimenti/allestimenti10.webp",
             "width": 600,
             "height": 600
           }
