--- a/public/locales/it/it.json
+++ b/public/locales/it/it.json
@@ -1079,7 +1079,7 @@
     ],
     "singleWorks": {
       "ansermè": {
-        "img": "/portfolioImg/anserme/cover_anse.webp",
+        "img": "/portfolioImg/anserme/cover2.png",
         "name": "Ansermé",
         "title": "anserme",
         "descrizione": "Bio Bontà di Montagna",
@@ -1107,7 +1107,7 @@
         "desc": [
           "Con Alessandro, abbiamo pensato di creare un concept grafico moderno e dai colori accesi che potesse esaltare la linea dei prodotti biologici, rendendoli facilmente riconoscibili e differenziandoli dalla concorrenza."
         ],
-        "logoImg": "/portfolioImg/anserme/intro_anse.png",
+        "logoImg": "/portfolioImg/anserme/intro_anse.jpg",
         "typo": {
           "titolo": "Typography",
           "typoImg": "/portfolioImg/anserme/typo_anse_text.png",
